Stabalized static viz size and in progress work to adjustt personal viz

--- a/MainVisualization/index.html
+++ b/MainVisualization/index.html
@@ -93,9 +93,9 @@
             #side-chart {
             position: absolute;
             top: 150px;
-            right: 0px;
-            width: 420px;
-            min-width: 320px;
+            right: 10px;
+            width: 350px;
+            height: 350px;
             margin-right: 0px;
             background: #f8f8f8;
             border-radius: 8px;
