--- a/csaw (Parent debt umeployment/index.html
+++ b/csaw (Parent debt umeployment/index.html
@@ -10,8 +10,8 @@
 		<svg id="graph1"></svg>
 	</svg>
 
-	<script src="https://d3js.org/d3.v5.min.js"></script>
-	<script src="main.js"></script>
+	<script src="https://d3js.org/d3.v7.min.js"></script>
+	<script src="main.js" type="module"></script>
 	<script>
 
 	</script>
