colors and slide

--- a/MainVisualization/index.html
+++ b/MainVisualization/index.html
@@ -192,6 +192,42 @@
 
         <div class="slide">
             <div class="center chapter">
+                <h1>Background Context</h1>
+            </div>
+        </div>
+
+        <div class="slide" data-has-chart="true">
+            <div class="alternates">
+                <div
+                    class="alternate active"
+                    data-chart-target="Unemployment rate"
+                    data-chart-type="categorical"
+                >
+                    <h1>Unemployment Rate</h1>
+                    <p>Economic indicator - unemployment rate</p>
+                </div>
+                <div
+                    class="alternate"
+                    data-chart-target="Inflation rate"
+                    data-chart-type="categorical"
+                >
+                    <h1>Inflation Rate</h1>
+                    <p>Economic indicator - inflation rate</p>
+                </div>
+                <div
+                    class="alternate"
+                    data-chart-target="GDP"
+                    data-chart-type="categorical"
+                >
+                    <h1>GDP</h1>
+                    <p>Economic indicator - Gross Domestic Product</p>
+                </div>
+                <div class="switch-alternate-button">Switch to Alternative</div>
+            </div>
+        </div>
+
+        <div class="slide">
+            <div class="center chapter">
                 <h1>Early Life & Background</h1>
             </div>
         </div>
@@ -505,42 +541,6 @@
             </div>
         </div>
 
-        <div class="slide">
-            <div class="center chapter">
-                <h1>External Context</h1>
-            </div>
-        </div>
-
-        <div class="slide" data-has-chart="true">
-            <div class="alternates">
-                <div
-                    class="alternate active"
-                    data-chart-target="Unemployment rate"
-                    data-chart-type="categorical"
-                >
-                    <h1>Unemployment Rate</h1>
-                    <p>Economic indicator - unemployment rate</p>
-                </div>
-                <div
-                    class="alternate"
-                    data-chart-target="Inflation rate"
-                    data-chart-type="categorical"
-                >
-                    <h1>Inflation Rate</h1>
-                    <p>Economic indicator - inflation rate</p>
-                </div>
-                <div
-                    class="alternate"
-                    data-chart-target="GDP"
-                    data-chart-type="categorical"
-                >
-                    <h1>GDP</h1>
-                    <p>Economic indicator - Gross Domestic Product</p>
-                </div>
-                <div class="switch-alternate-button">Switch to Alternative</div>
-            </div>
-        </div>
-
         <div class="slide" data-has-chart="true">
             <div class="alternates">
                 <div
@@ -554,6 +554,18 @@
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
+
+        <div class="slide">
+            <div class="center title">
+                <h1>The End</h1>
+                <h2>The Journy of the student from beginning to end</h2>
+                <p>SOME TEXT IDK</p>
+                <p style="margin-top: 40px; font-size: 1em; opacity: 0.8">
+                    Thank you for exploring.
+                </p>
+            </div>
+        </div>
+
         <div
             id="chart-overlay"
             style="
