--- a/MainVisualization/index.html
+++ b/MainVisualization/index.html
@@ -95,10 +95,10 @@
                 overflow: hidden;
             }
 
-            #side-chart {
+            .side-chart {
                 position: absolute;
                 top: 150px;
-                right: 800px;
+                right: 20px;
                 width: 350px;
                 height: 375px;
                 margin-right: 0px;
@@ -187,7 +187,6 @@
         <!--Basically a hack for our main chart, since that shouldn't be reinstianted on each slide, so its a permanent thing that gets hidden or shown-->
         <div class="permanent-chart-area" id="permanent-chart">
             <div class="chart-title-vertical" id="chart-title-vertical"></div>
-            <div id="side-chart"></div>
         </div>
 
         <div class="slide">
@@ -228,6 +227,7 @@
                     <h1>GDP</h1>
                     <p>Economic indicator - Gross Domestic Product</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
@@ -256,8 +256,8 @@
                     <h1>Father's Qualification</h1>
                     <p>Educational background of the student's father</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
-                
             </div>
         </div>
 
@@ -279,8 +279,8 @@
                     <h1>Father's Occupation</h1>
                     <p>Professional background of the student's father</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
-                
             </div>
         </div>
 
@@ -294,6 +294,7 @@
                     <h1>Nationality</h1>
                     <p>Student's nationality</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
@@ -308,6 +309,7 @@
                     <h1>International Status</h1>
                     <p>Whether the student is international or domestic</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
@@ -330,6 +332,7 @@
                     <h1>Gender</h1>
                     <p>Student's gender</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
@@ -358,6 +361,7 @@
                     <h1>Previous Qualification Grade</h1>
                     <p>Grade received in previous qualification</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
@@ -372,6 +376,7 @@
                     <h1>Scholarship Status</h1>
                     <p>Whether the student holds a scholarship.</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
@@ -394,6 +399,7 @@
                     <h1>Debtor Status</h1>
                     <p>Whether the student is a debtor</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
@@ -424,6 +430,7 @@
                     <h1>Educational Special Needs</h1>
                     <p>Special educational needs or accommodations</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
@@ -438,6 +445,7 @@
                     <h1>Course</h1>
                     <p>Selected course or program of study</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
@@ -452,6 +460,7 @@
                     <h1>Admission Grade</h1>
                     <p>Grade received for admission to the program</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
@@ -483,6 +492,7 @@
                     <h1>First Semester - Approved Units</h1>
                     <p>Number of curricular units approved in first semester</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
@@ -497,6 +507,7 @@
                     <h1>First Semester - Grades</h1>
                     <p>Grades achieved in first semester</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
@@ -524,6 +535,7 @@
                         Number of curricular units approved in second semester
                     </p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
@@ -538,6 +550,7 @@
                     <h1>Second Semester - Grades</h1>
                     <p>Grades achieved in second semester</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
@@ -558,6 +571,7 @@
                     <h1>Outcome</h1>
                     <p>Student's final academic outcome</p>
                 </div>
+                <div class="side-chart"></div>
                 <div class="switch-alternate-button">Switch to Alternative</div>
             </div>
         </div>
