--- a/MainVisualization/index.html
+++ b/MainVisualization/index.html
@@ -8,13 +8,13 @@
         <script src="./scripts/main.js" defer type="module"></script>
 
         <style>
-            @import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+            @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
         </style>
         <style>
             body {
                 margin: 0;
                 padding: 0;
-                font-family: "Comic Neue";
+                font-family: "DM Sans";
                 position: relative;
                 overflow: hidden; /* Prevent page scrollbar */
             }
