add day evening section

--- a/MainVisualization/index.html
+++ b/MainVisualization/index.html
@@ -475,6 +475,24 @@
             <div class="alternates">
                 <div
                     class="alternate active"
+                    data-chart-target="Daytime/evening attendance"
+                    data-chart-type="categorical"
+                >
+                    <h1>Class Schedule</h1>
+                    <p>
+                        Whether the student attends classes during daytime or
+                        evening
+                    </p>
+                </div>
+                <div class="side-chart"></div>
+                <div class="switch-alternate-button">Switch to Alternative</div>
+            </div>
+        </div>
+
+        <div class="slide" data-has-chart="true">
+            <div class="alternates">
+                <div
+                    class="alternate active"
                     data-chart-target="Curricular units 1st sem (enrolled)"
                     data-chart-type="categorical"
                 >
