--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                         first semester
                     </p>
                 </div>
-  
+                <div class="side-chart"></div>
             </div>
         </div>
 
@@ -534,7 +534,7 @@
                         second semester
                     </p>
                 </div>
-
+                <div class="side-chart"></div>
             </div>
         </div>
 
